--- a/index.html
+++ b/index.html
@@ -3,23 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Namesthe React</title>
+    <title>React</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="root"></div>
-    
-    
-    <script 
-    crossorigin 
-    src="https://unpkg.com/react@18/umd/react.development.js">
-
-    </script>
-
-    <script 
-    crossorigin
-    src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
-    </script>
-    <script src = "S2E2.js"></script>
+    <script type = "module"src = "./S1E1.js"></script>
 </body>
 </html>
