--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="root"></div>
-    <script type = "module"src = "./S1E1.js"></script>
+    <div id="root">
+        <h1>This is not the statement to be printed error in the code</h1>
+    </div>
+    <script type = "module" src = "./S1E1.js"></script>
 </body>
 </html>
